# ruwa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  GETTING_STARTED.md  README.md  SPEC.md  build.rs  docker-compose.yml  install.sh  railway.json
.github/workflows/: ci.yml  release.yml
bench/: COMPARISON.md  LATENCY_RUNBOOK.md  LIVE_SESSION_RUNBOOK.md  LOAD.md  probe.sh
bench/whatsmeow-harness/: go.mod  go.sum  main.go
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: confirm.tsx  shell.tsx  status.tsx  ui-bits.tsx
dashboard/src/lib/: api.ts  format.ts  types.ts
dashboard/src/pages/: auth-gate.tsx  contacts.tsx  diagnostics.tsx  instances.tsx  integrations.tsx  logs.tsx  messaging.tsx  metrics.tsx  overview.tsx  pairing.tsx  profile.tsx  settings.tsx  webhooks.tsx
mcp/: INSTALL.md  README.md  package-lock.json  package.json
mcp/scripts/: setup-search.mjs
mcp/src/: backfill.ts  index.ts  rag.ts
migrations/: 0001_initial.sql  0002_status_and_outbound_queue.sql  0003_proxy_url.sql  0004_api_key.sql  0005_signal_session_updated_at.sql  0006_session_leases.sql  0007_egress.sql  0008_lid_pn_map.sql  0009_canonicalize_lid_pn.sql  0010_purge_protocol_message_rows.sql  0011_event_log.sql  0012_mark_online.sql  0013_metrics_samples.sql  0014_log_ring.sql  0015_messages_fts.sql  0016_message_secrets.sql  0017_messages_edited.sql  0018_messages_revoked.sql  0019_nct_salt.sql  0020_privacy_tokens.sql  postgres_schema.sql
monitor/: Dockerfile  README.md  monitor.py  railway.json
proto/waAICommon/: WAWebProtobufsAICommon.proto
proto/waAICommonDeprecated/: WAAICommonDeprecated.proto
proto/waCommon/: WACommon.proto
proto/waCompanionReg/: WACompanionReg.proto
proto/waE2E/: WAWebProtobufsE2E.proto
proto/waMmsRetry/: WAMmsRetry.proto
proto/waStatusAttributions/: WAStatusAttributions.proto
proto/waWa6/: WAWebProtobufsWa6.proto
scripts/: live_test.sh  ruwactl  test-id-matrix.sh
src/: api.rs  crypto.rs  egress.rs  error.rs  main.rs  media.rs  protocol.rs  session.rs  store.rs
src/protocol/: tokens.rs
